# numnom

./: .gitignore  Cargo.toml  LICENSE  README.md  benchmarks.csv  pyproject.toml  test_binary.mps  test_output.json
.github/workflows/: python.yml
python/: Cargo.toml  README.md
python/python/numnom/: __init__.py  _numnom.pyi
python/src/: lib.rs
python/tests/: smoke_test.py
src/: lib.rs  main.rs
