[package]
name = "numnom"
version = "0.1.0"
edition = "2024"

[dependencies]
nom = "7.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_json5 = "0.1"
flate2 = "1.0"
russcip = { version = "0.9", features = ["bundled"], optional = true }

[features]
default = []
validate = ["dep:russcip"]
